[package]
name = "rusty-ziplod"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "^0.1"
tracing-subscriber = "^0.3.18"
tracing-futures = "^0.2"
derive_builder = "^0.12.0"
# google-cloud-default = { version = "0.4.0", features = ["storage"] }
# google-cloud-storage = "0.13.0"
rand = "^0.8.5"
serde = { version = "^1.0.152", features = ["derive"] }
serde_json = "^1.0.91"
songbird = { version = "^0.4.3", features = ["gateway", "serenity", "rustls"] }
symphonia = { version = "0.5.4", feature = ["mp3"] }
cloud-storage = "^0.11.1"
openssl = { version = "^0.10", features = ["vendored"] }
dotenv = "^0.15.0"
reqwest = "^0.11.20"
bytes = "^1.5.0"
rustls = "^0.21.9"
futures-util = "^0.3.30"
tokio-util = "^0.7.11"
kalosm = { git = "https://github.com/floneum/floneum", version = "0.3.2", features = [
    "full",
] }

[dependencies.serenity]
version = "^0.12.2"
features = [
    "client",
    "standard_framework",
    "voice",
    "collector",
    "rustls_backend",
    "cache",
]

[dependencies.tokio]
version = "^1.21.2"
features = ["macros", "rt-multi-thread", "signal"]
